added personal information to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 		  <body>
 			<div align="center">
 				<h1>Alexa S.</h1>
+				<div class="my-style"></div>
+					<h3>Alexa S.: Loves <em>sharks</em> in Sarasota, FL</h3>
+				</div>
+				</h3>
 				<h2>Software Developer</h2>
 				<hr>
 				<h3>About Me:</h3>
