added personal information to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 			<div align="center">
 				<h1>Alexa S.</h1>
 				<div class="my-style"></div>
+				.my-style {
+					color: hotpink;
+					background-color: black;
+					padding: 3px;
+				}				
 					<h3>Alexa S.: Loves <em>sharks</em> in Sarasota, FL</h3>
 				</div>
 				</h3>
